[package]
authors = ["hanje.dev@gmail.com"]
description = "Macros for ast nodes."
edition = "2021"
license = "Apache-2.0"
name = "ast_node"
version = "0.8.1"

[lib]
bench = false
proc-macro = true

[dependencies]
darling = "0.13"
pmutil = "0.5.1"
proc-macro2 = "1"
quote = "1"
swc_macros_common = {version = "0.3.4", path = "../swc_macros_common"}

[dependencies.syn]
features = ["derive", "fold", "parsing", "printing", "visit-mut"]
version = "1"