[package]
authors = ["hanje.dev@gmail.com"]
description = "Common utilities for swc macros."
documentation = "https://rustdoc.swc.rs/swc_macros_common/"
edition = "2021"
license = "Apache-2.0"
name = "swc_macros_common"
version = "0.3.5"

[lib]
bench = false

[dependencies]
pmutil = "0.5.1"
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
features = ["derive", "visit", "parsing", "full", "printing", "extra-traits"]
version = "1"